# Sidekick-Personal-Co-Worker

./: README.md  pyproject.toml
